<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InvisibleController</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="part">Part</string>
    <string name="action1">Action1</string>
    <string name="action2">Action2</string>
    <string name="action3">Action3</string>
    <string name="action4">Action4</string>
    <string name="action5">Action5</string>
    <string name="FMLight">FMLight</string>
    <string name="FSLight">FSLight</string>
    <string name="Chair">Chair</string>
    <string name="ChairHeader">ChairHeader</string>
    <string name="ChairHeaderUp">ChairHeaderUp</string>
    <string name="ChairHeaderDown">ChairHeaderDown</string>
    <string name="ChairBack">ChairBack</string>
    <string name="ChairBackUp">ChairBackUp</string>
    <string name="ChairBackDown">ChairBackDown</string>
    <string name="ChairHip">ChairHip</string>
    <string name="ChairHipUp">ChairHipUp</string>
    <string name="ChairHipDown">ChairHipDown</string>
    <string name="ChairFoot">ChairFoot</string>
    <string name="ChairFootUp">ChairFootUp</string>
    <string name="ChairFootDown">ChairFootDown</string>
    <string name="ChairFootLeft">ChairFootLeft</string>
    <string name="ChairFootRight">ChairFootRight</string>
    <string name="ChairWaist">ChairWaist</string>
    <string name="ChairWaistUp">ChairWaistUp</string>
    <string name="ChairWaistDown">ChairWaistDown</string>
    <string name="ChairWaistLeft">ChairWaistLeft</string>
    <string name="ChairWaistRight">ChairWaistRight</string>
    <string name="ChairStraight">ChairStraight</string>
    <string name="ChairHalfLayDown">ChairHalfLayDown</string>
    <string name="ChairLayDown">ChairLayDown</string>
    <string name="ChairStart">ChairStart</string>
    <string name="ChairStop">ChairStop</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="FrontDoor">FrontDoor</string>
    <string name="BackDoor">BackDoor</string>
    <string name="TailDoor">BackDoor</string>
    <string name="FrontDoorLock">FrontDoorLock</string>
    <string name="LightTest">LightTest</string>
    <string name="RedOn">RedOn</string>
    <string name="GreenOn">GreenOn</string>
    <string name="BlueOn">BlueOn</string>
    <string name="MixOn">MixOn</string>
    <string name="title_activity_adjust_light">AdjustLightActivity</string>


</resources>
