<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:columnCount="6"
    android:rowCount="32" >

    <TextView
        android:id="@+id/textView1"
        android:layout_column="0"
        android:layout_marginRight="30dp"
        android:layout_row="0"
        android:text="@string/part"
        android:layout_gravity="fill"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_column="1"
        android:layout_marginRight="30dp"
        android:layout_row="0"
        android:text="@string/action1"
        android:layout_gravity="fill"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="2"
        android:layout_marginRight="30dp"
        android:layout_row="0"
        android:text="@string/action2"
        android:layout_gravity="fill"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_column="3"
        android:layout_marginRight="30dp"
        android:layout_row="0"
        android:text="@string/action3"
        android:layout_gravity="fill"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_column="4"
        android:layout_marginRight="30dp"
        android:layout_gravity="fill"
        android:layout_row="0"
        android:text="@string/action4"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textViewFMLight"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/FMLight"
        android:textSize="40sp" />

    <Button
        android:id="@+id/buttonFMOn"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:text="@string/On"
        android:onClick="clickFMOn" />
    <Button
        android:id="@+id/buttonFMOff"
        android:layout_column="2"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:text="@string/Off"
        android:onClick="clickFMOff" />
    
    <TextView
        android:id="@+id/textViewFSLight"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/FSLight"
        android:textSize="40sp" />

    <Button
        android:id="@+id/buttonFSOn"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_row="2"
        android:text="@string/On"
        android:onClick="clickFSOn" />
    <Button
        android:id="@+id/buttonFSOff"
        android:layout_column="2"
        android:layout_gravity="fill"
        android:layout_row="2"
        android:text="@string/Off" 
        android:onClick="clickFSOff" />

</GridLayout>